--- a/_posts/0000-01-02-Cuebong.md
+++ b/_posts/0000-01-02-Cuebong.md
@@ -3,4 +3,4 @@ layout: slide
 title: "Welcome to our second slide!"
 ---
 Your text
-Use the left arrow to go back!
+Oops I just broke, come back when I've replaced my foot!
